--- a/dev/pages/include/components/search-bar.html
+++ b/dev/pages/include/components/search-bar.html
@@ -1,4 +1,4 @@
-<div class="search-bar">
+<div class="search-bar search-bar--default">
     <ul class="search-bar__list-links-tabs list-reset">
         <li class="search-bar__li-link-tab active">
             <span class="search-bar__link-tab">For Sale</span>
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn btn--size-sm btn--theme--white search-bar__btn-filter">
+                <a href="#" class="btn btn--size-sm btn--theme--white search-bar__btn-filter" data-modal-link="#more-filters">
                     <svg class="btn__icon">
                         <use xlink:href="./assets/icons/sprite-svg.svg#settings"/>
                     </svg>
