--- a/dev/assets/styles/parts/components/card-section.scss
+++ b/dev/assets/styles/parts/components/card-section.scss
@@ -20,13 +20,14 @@
             }
 
             &__wrapper-cards {
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(3, minmax(100px, 1fr));
             }
 
             &__block-nav {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+                grid-column: 1/-1;
                 margin-top: 50px;
             }
         }
@@ -74,7 +75,7 @@
             }
 
             &__wrapper-cards {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(2, minmax(100px, 1fr));
                 grid-column-gap: 20px;
                 grid-row-gap: 20px;
                 align-self: start;
@@ -99,6 +100,95 @@
                 height: 100%;
                 object-fit: cover;
                 object-position: center;
+            }
+
+            &__btn-show-cards {
+                display: none;
+            }
+
+            &__btn-show-cards,
+            &__show-cards-text,
+            &__show-cards-icon {
+                position: relative;
+            }
+
+            &__show-cards-decor,
+            &__btn-show-cards,
+            &__btn-show-cards::before {
+                border-radius: 50px 50px 0 0;
+            }
+        
+            &__btn-show-cards {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                height: 100%;
+                background: $blue-gradient;
+                border: none;
+                cursor: pointer;
+                color: $white;
+        
+                &:hover::before {
+                    opacity: 1;
+                }
+        
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    opacity: 0;
+                    background: #2F80ED;
+                    transition: opacity 0.4s;
+                }
+            }
+        
+            &__show-cards-text {
+                font-size: 18px;
+                font-weight: 600;
+            }
+        
+            &__show-cards-icon {
+                width: 15px;
+                height: 15px;
+                margin-left: 6px;
+                transition: transform $transition-time;
+        
+                use {
+                    fill: $white;
+                }
+            }
+
+            &__show-cards-decor {
+                position: absolute;
+                z-index: 1;
+                top: -1px;
+                left: -1px;
+                right: -1px;
+                bottom: -1px;
+                opacity: 0;
+                visibility: hidden;
+                pointer-events: none;
+                background-color: $white;
+                transition: 
+                    background-color $transition-time,
+                    opacity $transition-time,
+                    visibility $transition-time;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    width: 62px;
+                    height: 4px;
+                    background-color: $light-blue;
+                    border-radius: 10px;
+                }
             }
         }
 
