--- a/dev/assets/styles/pages/property-map-page.scss
+++ b/dev/assets/styles/pages/property-map-page.scss
@@ -1,4 +1,10 @@
 .property-map-page {
+    .page {
+        &__content {
+            padding: 24px 0 0 0;
+        }
+    }
+
     .card-slider {
         margin-top: 80px;
     }
