--- a/dev/assets/styles/pages/privacy-policy-page.scss
+++ b/dev/assets/styles/pages/privacy-policy-page.scss
@@ -1,1 +1,8 @@
-.privacy-policy-page {}
+.privacy-policy-page {
+
+    .side-panel {
+        .need-help {
+            margin-top: 0;
+        }
+    }
+}
