--- a/dev/assets/styles/pages/terms-of-use-page.scss
+++ b/dev/assets/styles/pages/terms-of-use-page.scss
@@ -1,1 +1,8 @@
-.terms-of-use-page {}
+.terms-of-use-page {
+
+    .side-panel {
+        .need-help {
+            margin-top: 0;
+        }
+    }
+}
