--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -29,3 +29,7 @@
 @import './components/text-block';
 @import './components/contact-form';
 @import './components/big-slider';
+@import './components/prices-apartments';
+@import './components/developer';
+@import './components/banner';
+@import './components/master-plan';
