--- a/dev/pages/include/components/developer-card.html
+++ b/dev/pages/include/components/developer-card.html
@@ -9,21 +9,16 @@
                     <img src="./assets/images/green-shield.svg" class="developer-card__image-verified" alt="">
                     <span class="developer-card__name">Sonmez real estate & construction</span>
                 </div>
-                <div class="developer-card__block-rating">
-                    <svg class="developer-card__rating-icon">
-                        <use xlink:href="./assets/icons/sprite-svg.svg#star-bg"/>
-                    </svg>
-                    <span class="developer-card__rating-text">5/5</span>
+                @include('../ui/rating-value.html')
+                <div class="developer-card__block-date-foundation">
+                    <span class="developer-card__date-foundation">Founded in <b>2011 year</b></span>
                 </div>
-            </div>
-            <div class="developer-card__block-date-foundation">
-                <span class="developer-card__date-foundation">Founded in <b>2011 year</b></span>
             </div>
         </div>
         <div class="developer-card__block-description">
             <p>
                 "Sonmez Real Estate & Construction" is a real estate agency and construction company in the city of Alanya on the Mediterranean coast of Turkey since 2001.
-                "Sonmez Real Estate & Construction" is a real estate agency and co... <a href="#" class="link-reset">Show More</a>
+                "Sonmez Real Estate & Construction" is a real estate agency and ... <a href="#" class="link-reset">Show More</a>
             </p>
         </div>
     </div>
