--- a/dev/assets/styles/pages/detailed-card-page.scss
+++ b/dev/assets/styles/pages/detailed-card-page.scss
@@ -6,7 +6,7 @@
 
     &__wrapper-info-main-container {
         display: grid;
-        grid-template-columns: 1fr 327px;
+        grid-template-columns: minmax(100px, 1fr) 327px;
         grid-column-gap: 30px;
     }
 
@@ -36,7 +36,8 @@
         padding-bottom: 50px;
 
         &__inner {
-            margin-top: 70px;
+            margin-top: auto;
+            margin-bottom: 60px;
         }
 
         .main-container {
@@ -50,20 +51,27 @@
     .property-description,
     .property-details,
     .other-features,
-    .infrastructure {
+    .infrastructure,
+    .prices-apartments,
+    .developer,
+    .master-plan {
         .main-container {
             padding: 0;
         }
     }
 
-    .card-slider {
-        margin-top: 60px;
+    .banner {
+        margin-top: 70px;
     }
 
     .property-description,
     .property-details,
     .other-features,
-    .infrastructure {
+    .infrastructure,
+    .prices-apartments,
+    .developer,
+    .card-slider,
+    .master-plan {
         margin-top: 60px;
     }
 }
