--- a/dev/assets/styles/parts/components/developer-card.scss
+++ b/dev/assets/styles/parts/components/developer-card.scss
@@ -38,6 +38,7 @@
     &__wrapper-name {
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     &__block-name {
@@ -54,28 +55,9 @@
         font-weight: 600;
     }
 
-    &__block-rating {
-        display: flex;
-        align-items: center;
-        margin-left: 20px;
-    }
-
-    &__rating-icon {
-        width: 18px;
-        height: 18px;
-
-        use {
-            fill: #FFB43C;
-        }
-    }
-
-    &__rating-text {
-        font-weight: 600;
-        margin-left: 8px;
-    }
-
     &__block-date-foundation {
         margin-top: 2px;
+        width: 100%;
     }
 
     &__date-foundation {
@@ -152,5 +134,9 @@
     .btn {
         width: 100%;
         margin-top: 8px;
+    }
+
+    .rating-value {
+        margin-left: 20px;
     }
 }
